--- a/ScreenPreview/ScreenPreview.csproj
+++ b/ScreenPreview/ScreenPreview.csproj
@@ -20,7 +20,8 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>$(SolutionDir)Build\Debug\bin\ScreenPreview</OutputPath>
+    <IntermediateOutputPath>$(SolutionDir)Build\Debug\obj\ScreenPreview</IntermediateOutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -29,7 +30,8 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>$(SolutionDir)Build\Release\bin\ScreenPreview</OutputPath>
+    <IntermediateOutputPath>$(SolutionDir)Build\Release\obj\ScreenPreview</IntermediateOutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
